# FakeNews

./: .gitignore  README.md  download_data.py  predictions.csv  pyproject.toml
data/: predictions.csv
notebooks/: 00_EDA.ipynb  01_baselines.ipynb
src/: data_ingestion.py
src/models/: baselines.py  evaluate_model.py  infer_model.py  predict.py  train_model.py
src/scripts/: clean_data.py  eda.py  utils.py
