[project]
name = "fakenews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.57.1",
]

